--- a/pages/chapter6.tex
+++ b/pages/chapter6.tex
@@ -20,27 +20,27 @@
 % The Current Maintainer of this work is Weisi Dai.
 %
 \chapter{结论与展望}
-\echapter{Conclusions and Future Work}
+\echapter{Conclusions and Suggestions}
 
     \section{结论}
     \esection{Conclusions}
-    
+
     自然场景图像中的文字检测是模式识别和机器视觉领域的热点研究方向，其可以在多种人工智能系统中得到应用：如无人驾驶、导盲、内容检索以及工业自动化。但是因为存在背景复杂、文字多样以及图像退化等问题的影响，导致在场景图像中精确的检测文字是一件很有挑战性的研究课题。本文对自然场景图像中的文字检测的相关研究工作进行调研和分析，并提出两个新颖的场景文字检测子。主要工作如下所示：
-    
+
     首先对自然场景图像中的文字检测领域内的研究现状及其问题进行了调研和分析，将文字检测方法分成两大类主流方法：基于区域的方法和基于连通部件的方法。然后各举一些经典方法以分析优缺点，从而奠定本文研究工作的理论基础。
-    
+
     然后提出了一种基于边缘骨架切割的文字检测方法用以解决边缘粘连问题。首先利用结构化边缘检测方法得到边缘响应图。接着在每个二值边缘图上，通过细化操作得到其边缘骨架图，并通过8领域内像素点分析所找到的边缘骨架结点。断开粘连点得到候选的文字边缘骨架，然后经过形态学滤除来过滤掉大部分明显不是文字的边缘骨架，剩余的非文字边缘骨架通过CNN分类器来滤除。最后基于非极大值抑制和文本行聚集得到定位结果。然而文字包围盒可能存在重叠率低的缺陷而导致文字定位不够精准。
-    
+
     接着提出一种基于二叉树搜索的文字检测方法用于解决上一个方法中文字包围盒定位不准的缺陷。首先对候选文字包围盒计算统计边缘响应，接着通过水平投影、求取梯度以及执行非极大值抑制等操作获得候选文本行。最后由生成的候选文本行中建立起二叉树型的搜索空间，并根据优化策略从搜索空间中找到最优的文本行定位结果。该结果即是经过优化后得到的文字细致定位结果，相比于边缘骨架切割文字检测子的粗略定位结果而言检测精度得到了大幅提升。
 
     \section{展望}
-    \esection{Future Work}
-    
+    \esection{Suggestions}
+
     本文提出的方法虽然能够对自然场景中多种文字进行鲁棒的检测，但是仍然难以处理一些诸如文字被背景遮挡、对比度过低或曝光影响等极端条件下的文字检测场景。针对上述这些待改进或解决的问题，计划从下面几个方面展开研究：
-    
+
     1）本文提出方法距实际应用还有一段距离：在ICDAR2013上的查全、查准和f值分别为89.2\%，75.5\%以及82.3\%，而在MSRA上的成绩分别为64\%，82\%和72\%，因此还有较大的提升空间。下一步可以继续结合深度学习到文字检测中，以提高本文方法在准确度方面的成绩。
-    
+
     2）本文提出的方法适用于英文文本行以及较为平直的文本行的检测，但对其它诸如阿拉伯文、日韩文、蒙古文等多语种和倾斜度高的文字的检测结果欠佳。因此需要对多语种和倾斜文字情况进行继续的研究。
-    
+
     3）随着场景文字检测和识别领域研究的发展，人们更加关注的是对文字信息的识别和提取。因此可以研究一种检测的同时执行识别，并通过识别反过来提升检测效果的端对端文字识别系统。
 
