--- a/pages/chapter3.tex
+++ b/pages/chapter3.tex
@@ -190,8 +190,8 @@
         欧拉数是二值图像的拓扑特征，其数值是连通区域数目与孔洞数目的差值。由不同的二值边缘图所生成的边缘骨架图，它们的连通区域数目比较稳定，但是孔洞数目的变化很剧烈。如图\ref{fig.c3_compare_skeleton} 所示，过低或过高的分割阈值下的二值边缘图所生成的边缘骨架图的孔洞数与连通区域的数目的差距很大，而正常分割阈值下的边缘骨架图中孔洞数目和连通区域数目的差值则保持在合理范围内。
 
         1种简单且有效的计算欧拉数的方法是计算$2*2$ 像素模式的数目，这些像素模式的类型存在$Q_1,Q_2$以及$Q_3$这3类：
-        
-       
+
+
         $Q_1 = \left\{
         \quad
         \begin{matrix} 1 & 0 \\ 0 & 0 \end{matrix}\quad,\quad
@@ -230,12 +230,12 @@
     \section{非文字骨架的滤除}
     \esection{Non-text skeleton's filtering}
 
-    在\ref{sec.c3_skeleton}节中，我们论述了边缘骨架的生成方法，而在\ref{sec.c3_skeleton_cut} 节阐明了从背景中分隔出候选文字边缘骨架的具体步骤。目前，所有候选文字边缘骨架与非文字的边缘骨架之间的粘连点已经断裂开来，因此边缘粘连问题被解决了。但是在这些候选的边缘骨架中，还混杂有一些非文字的边缘骨架，需要被分类判别出来并清楚掉。所以在本节，提出1 个两阶段的文字边缘骨架分类方法，用以滤除掉混杂在文字边缘骨架中的非文字边缘骨架杂质。
+    在\ref{sec.c3_skeleton}节中，论述了边缘骨架的生成方法，而在\ref{sec.c3_skeleton_cut} 节阐明了从背景中分隔出候选文字边缘骨架的具体步骤。目前，所有候选文字边缘骨架与非文字的边缘骨架之间的粘连点已经断裂开来，因此边缘粘连问题被解决了。但是在这些候选的边缘骨架中，还混杂有一些非文字的边缘骨架，需要被分类判别出来并清楚掉。所以在本节，提出1 个两阶段的文字边缘骨架分类方法，用以滤除掉混杂在文字边缘骨架中的非文字边缘骨架杂质。
 
         \subsection{形态学滤除}
         \esubsection{Morphological filtering}
 
-        第1阶段的分类方法是形态学滤除。首先，从图\ref{fig.c3_compare_skeleton}(a) 和图\ref{fig.c3_compare_skeleton}(b) 的对比中，我们可以分析出文字边缘骨架和非文字边缘骨架之间在形态上的不同：背景边缘骨架比较直且分散，而文字边缘骨架则相对而言弯曲且聚合在一起。基于这一观察，大量的非文字边缘骨架就可以通过一些形态学的限制来过滤掉。
+        第1阶段的分类方法是形态学滤除。首先，从图\ref{fig.c3_compare_skeleton}(a) 和图\ref{fig.c3_compare_skeleton}(b) 的对比中，可以分析出文字边缘骨架和非文字边缘骨架之间在形态上的不同：背景边缘骨架比较直且分散，而文字边缘骨架则相对而言弯曲且聚合在一起。基于这一观察，大量的非文字边缘骨架就可以通过一些形态学的限制来过滤掉。
 
         \begin{figure*}[!h]
         \centering
@@ -265,7 +265,7 @@
         \subsection{基于卷积神经网络的滤除}
         \esubsection{convolutional neural network-based filtering}
 
-        第2阶段的分类过程是更为精细的分类操作。受Wang 等\cite{Wang2012End} 提出的利用卷积神经网络(CNN) 作端对端文字识别方法的启发，在精细分类阶段我们提出一种基于CNN 的文字边缘骨架分类器，用于滤除掉遗漏下来的非文字边缘骨架。这个基于CNN 的边缘骨架分类器的架构如图\ref{fig.c3_cnn}所示，其网络结构是由2 个卷积层，分别后接2 个池化层，最后连1 个全连接层构成。其中第1 个卷积层有$n_1 = 64$ 个卷积模板，第2 个卷积层有$n_2 = 128$ 个卷积模板。全连接层后接2 个类别，分别为文字边缘和非文字边缘类别。2 类中置信度更高的类别即为分类判别结果。
+        第2阶段的分类过程是更为精细的分类操作。受Wang 等\cite{Wang2012End} 提出的利用卷积神经网络(CNN) 作端对端文字识别方法的启发，在精细分类阶段本文提出一种基于CNN 的文字边缘骨架分类器，用于滤除掉遗漏下来的非文字边缘骨架。这个基于CNN 的边缘骨架分类器的架构如图\ref{fig.c3_cnn}所示，其网络结构是由2 个卷积层，分别后接2 个池化层，最后连1 个全连接层构成。其中第1 个卷积层有$n_1 = 64$ 个卷积模板，第2 个卷积层有$n_2 = 128$ 个卷积模板。全连接层后接2 个类别，分别为文字边缘和非文字边缘类别。2 类中置信度更高的类别即为分类判别结果。
 
         \begin{figure*}[!h]
         \centering
@@ -282,10 +282,12 @@
     \section{文本行的局部迭代优化}
     \esection{Text line's iteratively local refinement}
 
-    本文上述所提出的基于边缘骨架切割的检测方法和2 阶段分类判别方法可以获得较高的文字检测查全率，但是文字检测结果同真实结果值(ground truth)之间的重叠率还是不满足期望。为了达到文字检测过程中的紧凑性(compactness) 标准，我们通过下面的算法\ref{alg:c3_iter_local_refine} 来调整文字检测包围框，使其更靠近文字的真实位置：
+    本文上述所提出的基于边缘骨架切割的检测方法和2 阶段分类判别方法可以获得较高的文字检测查全率，但是文字检测结果同真实结果值(ground truth)之间的重叠率还是不满足期望。为了达到文字检测过程中的紧凑性(compactness) 标准，本文通过下面的算法\ref{alg:c3_iter_local_refine} 来调整文字检测包围框，使其更靠近文字的真实位置：
 
-    \begin{algorithm}[!h]
-	\renewcommand{\algorithmicrequire}{\textbf{输入：}}
+    \qquad \qquad \qquad \qquad 算法1 文本行的局部迭代优化算法
+    
+
+    \begin{algorithm}[!h] \renewcommand{\algorithmicrequire}{\textbf{输入：}}
 	\renewcommand{\algorithmicensure}{\textbf{输出：}}
 	\caption{文本行的局部迭代优化算法}
 	\label{alg:c3_iter_local_refine}
@@ -324,7 +326,7 @@
 
         为了验证本章提出的文字检测子的效果，将该检测子运行在自然场景文字测试集ICDAR 2013 上。这个测试集合包含462 张标注的自然场景文字图片，其中有229 张图片用以训练，而233 张图片用于测试。该测试集合非常具有挑战性：因为图片存在光照不均、尺度不同(尺度范围从$459 \times 405$ 到$3888 \times 2592$) 的问题，而且文字也存在不同字体和颜色的问题。此外还利用了MSRA-TD500 测试数据集来验证本方法在多方向和多语种文字图像样本上的检测效果。最终使用Wolf 等\cite{Wolf2006Object} 提出的评价标准来验证本方法的文字检测结果。评价标准利用到了查全（recall），查准（precision） 和f 值等概念，这些概念来源于信息检索领域(Information Retrieval,IR)。
 
-        其中查全率（recall）代表的含义是真值（ground truth）中的东西被提取出来的比例，如公式\ref{eq.c3_R}所示：      
+        其中查全率（recall）代表的含义是真值（ground truth）中的东西被提取出来的比例，如公式\ref{eq.c3_R}所示：
         \begin{equation}
         recall=\frac{N.o. \quad True Positives}{N.o. \quad Ground truth}
         \label{eq.c3_R}
@@ -353,7 +355,7 @@
         \label{fig.c3_evalu_bbox_match}
         \end{figure*}
 
-        其中ICDAR2003数据集采用的就是1对1的匹配方式\cite{Mariano2002Performance}，这种匹配方式最为简洁，其计算过程如公式\ref{eq.c3_match_1v1} 所示：都使用了BestMatch 来计算查全率和查准率。    
+        其中ICDAR2003数据集采用的就是1对1的匹配方式\cite{Mariano2002Performance}，这种匹配方式最为简洁，其计算过程如公式\ref{eq.c3_match_1v1} 所示：都使用了BestMatch 来计算查全率和查准率。
         \begin{equation}
         \left\{
         \begin{array}{c}
@@ -362,8 +364,8 @@
         \end{array}
         \right.
         \label{eq.c3_match_1v1}
-        \end{equation}     
-        给定1个定位包围盒b，假设b是某一个包围盒真实值$G_i$，并且给定另外1 个包围盒的序列B，假设B是文字检测算法的定位结果D，那么如公式\ref{eq.c3_1v1_bestmatch}所示，算法BestMatch 表示的是b在集合B中的匹配得分，并会得到从0到1 之间的1 个数值：当集合B中存在1 个和b几乎完全重合的包围盒时值为1；相反当b 同B种的包围盒不存在任何的重合时值为0。      
+        \end{equation}
+        给定1个定位包围盒b，假设b是某一个包围盒真实值$G_i$，并且给定另外1 个包围盒的序列B，假设B是文字检测算法的定位结果D，那么如公式\ref{eq.c3_1v1_bestmatch}所示，算法BestMatch 表示的是b在集合B中的匹配得分，并会得到从0到1 之间的1 个数值：当集合B中存在1 个和b几乎完全重合的包围盒时值为1；相反当b 同B种的包围盒不存在任何的重合时值为0。
         \begin{equation}
         \left\{
         \begin{array}{c}
@@ -372,19 +374,19 @@
         \end{array}
         \right.
         \label{eq.c3_1v1_bestmatch}
-        \end{equation}       
+        \end{equation}
         上述这种1对1匹配的方式将问题进行了简化，使得计算方便简单，但也存在着问题：若文字定位的真实区域的标注粒度比较大时，如1 个包围盒中覆盖有多个单词，那么此时尽管文字检测算法可能正确定位出每个单词，但测评得到的检测分数依然会很低。那么针对这种问题，在ICDAR2013上采用的就是更新了的测评方法\cite{Wolf2006Object}:该方法同时就1 对1,1对多以及多对1的这几种状况进行了综合考虑。
 
-        在新的测评方法中，用两个矩阵$\sigma$ 和$\tau$ 来分别表示查全率和查准率，其计算公式如\ref{eq.c3_overlap_matrices} 所示：可见这两个矩阵的大小都是$|G|\times|D|$，其中1行就代表某一个文字真实区域包围盒$G_i$，而1列就代表文字检测算法的某一个定位结果$D_j$。      
+        在新的测评方法中，用两个矩阵$\sigma$ 和$\tau$ 来分别表示查全率和查准率，其计算公式如\ref{eq.c3_overlap_matrices} 所示：可见这两个矩阵的大小都是$|G|\times|D|$，其中1行就代表某一个文字真实区域包围盒$G_i$，而1列就代表文字检测算法的某一个定位结果$D_j$。
         \begin{equation}
         \sigma_{ij}=R(G_i,D_j),\tau_{ij}=P(G_i,D_j)
         \label{eq.c3_overlap_matrices}
-        \end{equation}       
+        \end{equation}
         这两个矩阵被称为重合矩阵（overlap matrices），若$G_i$与$D_j$之间存在重合那么在重合矩阵的第i 行、第j 列上的元素即为大于0的数值。而当满足条件\ref{eq.c3_T}时，真实文字区域$G_i$ 与检测到的文字区域$D_j$ 就是匹配的。
         \begin{equation}
         \sigma_{ij}>t_r,\tau_{ij}>t_p
         \label{eq.c3_T}
-        \end{equation}       
+        \end{equation}
         其中$t_r$和$t_p$分别是$\sigma_{ij}$和$\tau_{ij}$的阈值，且$t_r,t_p \in [0,1]$。则在新的测评方法中，三种匹配方式有以下定义：
 
         1）一个真实区域$G_i$只和1个检测区域$D_j$ 匹配，也就是1对1的匹配。这种匹配方式要满足的条件是：$G_i$的大部分只能被$D_j$检测出来，即$\sigma_{ij} \ge t_r$；且只有$D_j$对$G_i$的查准率符合要求，即$\tau_{ij} \ge t_p$。
@@ -393,7 +395,7 @@
 
         3）一个算法检测到的区域$D_j$与真实区域集合G的子集$G_o$匹配，即多对1的匹配。满足条件为：$G_o$中的每个区域都有一部分能被检测到，即$\sigma_{ij} \ge t_r,\forall i \in G_o$；而且$D_j$也以一定的精度检测到了$G_o$，也就是$\sum_{i \in G_o} \tau_{ij} \ge t_p$。
 
-        根据上述规则，就可以定义在不同类型匹配情况下的匹配度$Match_G(G_i,D,t_r,t_p)$以及$Match_D(D_j,G,t_r,t_p)$，并得到最终的测评指标$R(G,D,t_r,t_p)$和$P(G,D,t_r,t_p)$，如公式\ref{eq.c3_R_P}所示。       
+        根据上述规则，就可以定义在不同类型匹配情况下的匹配度$Match_G(G_i,D,t_r,t_p)$以及$Match_D(D_j,G,t_r,t_p)$，并得到最终的测评指标$R(G,D,t_r,t_p)$和$P(G,D,t_r,t_p)$，如公式\ref{eq.c3_R_P}所示。
         \begin{equation}
         \left\{
         \begin{array}{c}
@@ -408,7 +410,7 @@
         \subsection{实验结果与分析}
         \esubsection{Experimental Results and Analysis}
 
-        如表\ref{tab.c3_icdar13}所示，本章提出的方法在ICDAR 2013 测试数据集上取得了86.79\%的查准率和76.21\%的查全率。该方法的查全率超过了其它所有的检测方法的查全率，这得益于文字边缘骨架提取方法的良好设计。同时我们提出了2 阶段非文字过滤以及文本行的局部迭代优化策略，以确保本方法的高查准结果。值得一提的是，本方法没有使用传统的图像金字塔上的多尺度滑动窗进行文字与背景的二分类，而是采用文字边缘骨架提取加单尺度的CNN 分类判断，因此在保证检测成绩的同时，大幅缩减了计算量和用时。另外，在提出的方法中融入文本行的局部迭代优化(Iteratively Local Refinement，简称ILR)，可以进一步将检测F 值提升3.3\%，并超越其它所有先进的文字检测方法。
+        如表\ref{tab.c3_icdar13}所示，本章提出的方法在ICDAR 2013 测试数据集上取得了86.79\%的查准率和76.21\%的查全率。该方法的查全率超过了其它所有的检测方法的查全率，这得益于文字边缘骨架提取方法的良好设计。同时本文提出了2 阶段非文字过滤以及文本行的局部迭代优化策略，以确保本方法的高查准结果。值得一提的是，本方法没有使用传统的图像金字塔上的多尺度滑动窗进行文字与背景的二分类，而是采用文字边缘骨架提取加单尺度的CNN 分类判断，因此在保证检测成绩的同时，大幅缩减了计算量和用时。另外，在提出的方法中融入文本行的局部迭代优化(Iteratively Local Refinement，简称ILR)，可以进一步将检测F 值提升3.3\%，并超越其它所有先进的文字检测方法。
 
         \begin{table*}[!h]
         %\small
@@ -422,8 +424,8 @@
         \midrule
         \textbf{Proposed} & \textbf{76.21} & \textbf{86.79} & \textbf{81.16}(+3.3) \\
         %\textbf{Proposed} & \textbf{76.21} & \textbf{86.79} & \textbf{81.16} \\
-        Without \textbf{ILR} & 73.28 & 84.80 & 77.83 \\
-        \hline
+        \textbf{Proposed} Without ILR & 73.28 & 84.80 & 77.83 \\
+        %\hline
         Tian\cite{Tian2016Text} & 75.89 & 85.15 & 80.25 \\
         Zhu\cite{Zhu2016Text} & 75.00 & 85.00 & 79.00 \\
         Gupta\cite{Gupta2016Synthetic} & 66.30 & 94.80 & 78.00 \\
@@ -448,17 +450,17 @@
         %\hline
         \midrule
         All ERs & 6,051,331 & 0.966 \\
-        \hline
+        %\hline
         Matas\cite{Matas2004Robust} & 39,762 & 0.539 \\
-        \hline
+        %\hline
         Sung\cite{Sung2015Scene} &  &  \\
-        Initial ERs & 1,729,833 & 0.896 \\
-        Refined ERs & 93,357 & 0.877 \\
-        \hline
+        \quad Initial ERs & 1,729,833 & 0.896 \\
+        \quad Refined ERs & 93,357 & 0.877 \\
+        %\hline
         \textbf{Our method}  &  &  \\
-        Initial Skeletons & 608,394 & 0.936 \\
-        + Classifier & 6,034 & 0.842 \\
-         + Classifier + ILR & 8,231 & 0.879 \\
+        \quad Initial Skeletons & 608,394 & 0.936 \\
+        \quad + Classifier & 6,034 & 0.842 \\
+        \quad + Classifier + ILR & 8,231 & 0.879 \\
         %\hline
         \bottomrule
         \end{tabular}
@@ -488,7 +490,7 @@
         \label{tab.c3_msra}
         \end{table*}
 
-        如表格\ref{tab.c3_msra}所示，我们的方法还与其它方法在微软MSRA-TD500 文字检测数据集上进行了对比。本章提出的方法取得了查全0.64，查准0.82 以及F 值0.72 的检测结果，其成绩显著高于其它方法。微软MSRA-TD500 数据集中的文本大多倾斜、弯曲并由多国语言构成。而从MSRA-TD500 的实验结果上来看，本方法可以在自然场景图像中成功检测到多方向和多语种的文本。
+        如表格\ref{tab.c3_msra}所示，本文的方法还与其它方法在微软MSRA-TD500 文字检测数据集上进行了对比。本章提出的方法取得了查全0.64，查准0.82 以及F 值0.72 的检测结果，其成绩显著高于其它方法。微软MSRA-TD500 数据集中的文本大多倾斜、弯曲并由多国语言构成。而从MSRA-TD500 的实验结果上来看，本方法可以在自然场景图像中成功检测到多方向和多语种的文本。
 
         \begin{figure}[!h]
         \centering
@@ -509,6 +511,6 @@
 
     本章提出的是基于边缘骨架切割的文字检测方法。首先对于输入的场景文字图片，利用结构化边缘检测方法得到边缘响应图，然后基于一系列像素强度值阈值，对边缘响应图进行分割，得到相应的二值化边缘图。接着在每个二值边缘图上，通过细化操作得到其边缘骨架图，并通过8 领域内像素点分析所找到的边缘骨架结点。而文字边缘与背景间的粘连点，就存在于这些边缘骨架结点中。因此断开粘连点得到候选的文字边缘骨架，然后经过形态学滤除来过滤掉大部分明显不是文字的边缘骨架，剩余的不易区分的非文字边缘骨架，可通过基于 CNN 的分类器来进一步滤除。最后基于非极大值抑制和文本行聚集操作，得到文本行定位结果。
 
-    在公开数据集ICDAR2011，ICDAR2013以及MSRA-TD500 上，我们对本章提出的方法都进行了实验，并将实验结果与其它先进方法进行了比较。实验结果证明了该方法的有效性。此外通过分析本章提出的方法，以及针对其文字定位包围盒不够精准的局限，我们将会在下一章中提出基于二叉树搜索的文本行优化方法。
+    在公开数据集ICDAR2011，ICDAR2013以及MSRA-TD500 上，本文对本章提出的方法都进行了实验，并将实验结果与其它先进方法进行了比较。实验结果证明了该方法的有效性。此外通过分析本章提出的方法，以及针对其文字定位包围盒不够精准的局限，本文将会在下一章中提出基于二叉树搜索的文本行优化方法。
 
 
