--- a/meta_text.tex
+++ b/meta_text.tex
@@ -22,7 +22,8 @@
 
 % 标题，中文
 %\ctitle{基于由粗到细的场景文字检测方法研究与应用}
-\ctitle{基于文字边缘骨架切割和文本行定位矫正的场景文字检测}
+\ctitle{基于文字边缘骨架切割和文本行定位矫正
+的场景文字检测方法研究}
 
 % 作者，中文
 \cauthor{贺翔 }
@@ -63,7 +64,7 @@
 % 学科门类，英文
 % 从Philosophy（哲学）、Economics （经济学）、Law （法学）、Education （教育学）、Arts（文学）、
 %   Science（理学）、Engineering Science （工学）、Medicine （医学）、Management Science （管理学）中选择
-\ecate{Engineering Science}
+\ecate{Engineering }
 
 % 提交日期，英文，本科生不需要
 % 应当和 cproddate 保持一致
